core/static/css/style.css
/* Base */
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  min-height: 30px;
  background-color: #101010;
  padding: 10px;
}
.footer a, .footer {
    color: #999;
}
.format-help-link:hover {
    cursor: pointer;
}
.pink {
	color: #ed174e !important;
}
body {
	background: #fff url("/static/img/shattered.png");
}
.navbar {
    margin-bottom: 0;
}
.mainContainer {
    margin-top: 20px;
}
.jumbotron {
    margin-bottom: 0;
}
#logo {
	font-size: 1.8em;
	font-family: Helvetica, Arial, sans-serif;
}
.navbar {
	border-radius: 0px !important;
}
.green {
    color: green; !important
}
.red {
    color: red; !important
}
.notifier {
    border-left: 1px solid #444444;
    border-right: 1px solid #444444;
}
.notifier-unread span {
    color: red;
}
#notifications-view-more {
    position: relative;
}
#notifications-view-more hr {
    margin-bottom: 5px;
}
#notifications-view-more p {
    margin-bottom: 0;
}
#notifications-view-more span {
    /* make whole div into a link */
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 1;
    /* edit: fixes overlap error in IE7/8,
    make sure you have an empty gif */
    background-image: url('/static/img/blank.gif');
}
/* Make markdown h1s, h2s, blockquotes look good in proposals and comments */
.comment h1, .proposal-text h1 {
    font-size: 1.3em;
}
.comment h2, .proposal-text h2 {
    font-size: 1.1em;
}
.comment blockquote, .proposal-text blockquote {
    font-size: 1em;
}

/* Fancy shadow effects */
.page-shadow {
	position: relative;
	background-color: #fff;
	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
	-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
    -webkit-transition: all 0.2s linear;
    -o-transition: all 0.2s linear;
    -moz-transition: all 0.2s linear;
    -ms-transition: all 0.2s linear;
    -kthtml-transition: all 0.2s linear;
    transition: all 0.2s linear;
}
.page-shadow:before, .page-shadow:after {
	position: absolute;
	width: 40%;
	height: 10px;
	content: ' ';
	left: 12px;
	bottom: 12px;
	background: transparent;
	-webkit-transform: skew(-5deg) rotate(-5deg);
	-moz-transform: skew(-5deg) rotate(-5deg);
	-ms-transform: skew(-5deg) rotate(-5deg);
	-o-transform: skew(-5deg) rotate(-5deg);
	transform: skew(-5deg) rotate(-5deg);
	-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
	z-index: -1;
}
.page-shadow:after {
	left: auto;
	right: 12px;
	-webkit-transform: skew(5deg) rotate(5deg);
	-moz-transform: skew(5deg) rotate(5deg);
	-ms-transform: skew(5deg) rotate(5deg);
	-o-transform: skew(5deg) rotate(5deg);
	transform: skew(5deg) rotate(5deg);
}


/* Proposals pages (index) */
.index-main-button {
    margin-bottom: 5px;
}
.index-see-more-link {
    font-size: 0.6em;
}
.index-proposal {
    margin-bottom: 20px;
    padding: 15px;
    position: relative;
    overflow: hidden;
    height: 250px;
}
.index-proposal:hover {
    position: relative;
	background-color: #fff;
	-webkit-box-shadow: 0 0 10px rgba(237, 23, 78, 0.60), inset 0 0 50px rgba(0, 0, 0, 0.02);
	-moz-box-shadow: 0 0 10px rgba(237, 23, 78, 0.60), inset 0 0 50px rgba(0, 0, 0, 0.02);
	box-shadow: 0 0 10px rgba(237, 23, 78, 0.60), inset 0 0 50px rgba(0, 0, 0, 0.02);
    -webkit-transition: all 0.2s linear;
    -o-transition: all 0.2s linear;
    -moz-transition: all 0.2s linear;
    -ms-transition: all 0.2s linear;
    -kthtml-transition: all 0.2s linear;
    transition: all 0.2s linear;
    cursor: pointer;
}
.index-proposal hr {
    margin-top: 7px;
    margin-bottom: 10px;
}
.index-proposal-top {
    height: 150px;
    overflow: hidden;
}
.index-proposal-title {
    margin-bottom: 5px;
}
.index-proposal-title span {
    /* make whole div into a link */
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 1;
    /* edit: fixes overlap error in IE7/8,
    make sure you have an empty gif */
    background-image: url('/static/img/blank.gif');
}
.index-proposal-tags {
    color: grey;
    font-size: 0.9em;
}
.index-proposal-user {
    color: grey;
    font-size: 0.9em;
}
.index-proposal-bottom {
    position: absolute;
    bottom: 15px;
    right: 15px;
    left: 15px;
}
.index-proposal-meta {
    color: grey;
    font-size: 0.9em;
    margin-top: 4px;
}
.endless_more, .endless_loading {
	display: block;
	margin: 10px auto 10px auto;
	font-weight: normal;
	text-align: center;
	vertical-align: middle;
	cursor: pointer;
	background-image: none;
	border: 1px solid #cccccc;
	white-space: nowrap;
	border-radius: 6px;
	color: #333333;
	background-color: #ffffff;
	padding: 10px 16px;
	font-size: 18px;
	line-height: 1.33;
}
.endless_more:hover, .endless_loading:hover {
	color: #333333;
	text-decoration: none;
}

.voteUp {
    float: left;
    margin-top: 20px;
}
.voteDown {
    float: right;
    margin-top: 20px;
}

.ribbon {
  background-color: #a00;
  overflow: hidden;
  white-space: nowrap;
  /* top right corner */
  position: absolute;
  right: -40px;
  top: 8px;
  /* 45 deg cw rotation */
  -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
       -o-transform: rotate(45deg);
          transform: rotate(45deg);
  /* shadow */
  -webkit-box-shadow: 0 0 5px #888;
     -moz-box-shadow: 0 0 5px #888;
          box-shadow: 0 0 5px #888;
}
.ribbon a {
  border: 1px solid #faa;
  color: #fff;
  display: block;
  font: bold 0.8em 'Helvetica Neue', Helvetica, Arial, sans-serif;
  margin: 1px 0;
  padding: 5px 50px;
  text-align: center;
  text-decoration: none;
  /* shadow */
  text-shadow: 0 0 5px #444;
}

/* Proposal */
.proposal-hidden {
    display: none;
}
.proposal-progress-bar {
    margin-bottom: 20px;
    height: 5px;
    border-radius: 0;
    overflow: visible;
}
.proposal-page {
    background-color: #f6f6f6;
	margin-bottom: 15px;
	padding: 15px;
    margin-top: 40px;
}
#proposal-progress-bar-count {
    width: 100%;
    margin-bottom: 25px;
}
#proposal-progress-bar-count-for {
    color: #6cad4d;
}
#proposal-progress-bar-count-against {
    color: #ce4b48;
}
#proposal-action-menu-open {
    position: absolute;
    right: 10px;
    top: 6px;
    height: 20px;
    width: 15px;
}
#proposal-action-menu-open a {
    color: grey;
}
#proposal-action-menu-open span {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 1;
    background-image: url('/static/img/blank.gif');
}
#proposal-action-menu-close {
    float: left;
    cursor: pointer;
}
#proposal-title {
    margin-bottom: 10px;
}
#proposal-user {
    margin-top: 0;
    color: grey;
}
.proposal-text {
    margin-top: 20px;
    margin-bottom: 30px;
}
.proposal-vote-buttons {
    margin-top: 20px;
}
.proposal-tags {
    margin-top: 10px;
    font-size: 0.9em;
}
.proposal-metainfo {
    margin-top: 15px;
}
#proposal-response {
    background: #f0f0f0;
}
#proposal-response:target {
    -webkit-box-shadow: 0 0 10px rgba(237, 23, 78, 0.60), inset 0 0 50px rgba(0, 0, 0, 0.02);
	-moz-box-shadow: 0 0 10px rgba(237, 23, 78, 0.60), inset 0 0 50px rgba(0, 0, 0, 0.02);
	box-shadow: 0 0 10px rgba(237, 23, 78, 0.60), inset 0 0 50px rgba(0, 0, 0, 0.02);
    -webkit-transition: all 0.9s linear;
    -o-transition: all 0.9s linear;
    -moz-transition: all 0.9s linear;
    -ms-transition: all 0.9s linear;
    -kthtml-transition: all 0.9s linear;
    transition: all 0.9s linear;
}
#proposal-vote-form-top {
    margin-top: 40px;
}
#proposal-similar-page-links {
    text-align: center;
}
#proposal-similar-page-links a {
    color: grey;
    font-size: 2em;
}
hr.fancy-hr {
  height: 3px;
  border: 0;
  background-color: #c3c3c3;
  background-image: -webkit-gradient(linear, 0 0, 100% 0, from(#f7f6f4), to(#f7f6f4), color-stop(50%, #fff));
  background-image: -webkit-linear-gradient(left, #f7f6f4, #fff, #f7f6f4);
  background-image: -moz-linear-gradient(left, #f7f6f4, #fff, #f7f6f4);
  background-image: -ms-linear-gradient(left, #f7f6f4, #fff, #f7f6f4);
  background-image: -o-linear-gradient(left, #f7f6f4, #fff, #f7f6f4);
}
hr.fancy-hr::after {
  content: '';
  display: block;
  height: 1px;
  background-color: #f7f6f4;
  background-image: -webkit-gradient(linear, 0 0, 100% 0, from(#f7f6f4), to(#f7f6f4), color-stop(50%, #c3c3c3));
  background-image: -webkit-linear-gradient(left, #f7f6f4, #c3c3c3, #f7f6f4);
  background-image: -moz-linear-gradient(left, #f7f6f4, #c3c3c3, #f7f6f4);
  background-image: -ms-linear-gradient(left, #f7f6f4, #c3c3c3, #f7f6f4);
  background-image: -o-linear-gradient(left, #f7f6f4, #c3c3c3, #f7f6f4);
}


/* Comments */
.comments {
    padding: 15px;
}
.comment {
    padding: 15px;
    margin-top: 15px;
    background: #fff;
    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
	-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
}
.comment:target {
    -webkit-box-shadow: 0 0 10px rgba(237, 23, 78, 0.60), inset 0 0 50px rgba(0, 0, 0, 0.02);
	-moz-box-shadow: 0 0 10px rgba(237, 23, 78, 0.60), inset 0 0 50px rgba(0, 0, 0, 0.02);
	box-shadow: 0 0 10px rgba(237, 23, 78, 0.60), inset 0 0 50px rgba(0, 0, 0, 0.02);
}
.comment-meta {
    display: inline;
    color: grey;
    font-size: 0.9em;
}
.comment-user-name-link {
    color: #2F6CB1;
}
.comment-user-title {
    color: grey;
    font-size: 0.9em;
}
.comment-user-status {
    color: goldenrod;
}
.comment-votes {
    position: absolute;
    top: 15px;
    right: 15px;
    color: grey;
    font-size: 0.9em;
}
.comment-reply-link {
    cursor: pointer;
}
.proposal-amendment {
    background-color: #F3F3F3;
}
/* Submission form  */
#similar {
    display: none;
}
#editUserForm {
    display: none;
    background-color: white;
    border-radius: 5px;
    padding: 10px;
    margin: 10px 0;
}
#editUserText:hover {
    cursor: pointer;
}
.charNum {
    color: grey;
    font-size: 0.9em;
}

/* Tags */
.tag {
    background-color: #c6e6f7;
    margin: 3px;
    padding: 1px 3px;
    color: #767676;
    display: inline-block;
}
.tag:hover {
    background-color: #b6d5e6;
    color: #606060;
    text-decoration: none;
}
#followed-tags-list {
    list-style-type: none;
    padding-left: 0;
    font-size: 0.9em;
}
#tag-page-title {
    display: inline;
}
#tag-page-button {
    position: relative;
    top: -15px;
    margin-top: 20px;
}
#tag-list label {
    /* tags in submit page */
    background-color: #7AA8D5;
    margin: 3px;
    padding: 1px 3px;
    color: #ECECEC;
    display: inline-block;
    font-weight: normal;
}
#tag-list label:hover {
    background-color: #6A92BE;
    color: #C5C5C5;
}
#tag-list li {
    /* make the tag list look less like a list */
    list-style: none;
    float: left;
}
#tag-list {
    padding-left: 0;
}

